k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weerstandnatuursteen-frontend
  labels:
    app: weerstandnatuursteen-frontend
spec:
  type: ClusterIP
  selector:
    app: weerstandnatuursteen-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
